--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,11 @@ anyhow = "1.0.89"
 clap = "4.5.20"
 csv = "1.3.0"
 log = "0.4.22"
-serde = "1.0.210"
+serde = { version = "1.0", features = ["derive"] }
 serde-xml-rs = "0.6.0"
+
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+opt-level = 3
